# commcare-cloud

./: .ansible-lint  .ansible-lint-ignore  .flake8  .gitignore  .gitmodules  .isort.cfg  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  Vagrantfile  Vagrantfile-couch2-nodes  Vagrantfile-es-nodes  Vagrantfile-monolith  cluster-aws-new-instances.json  deploy_db.yml  deploy_production_webworker.yml  deploy_stack.yml  deploy_staging_webworker.yml  deploy_webworker.yml  dev_requirements.txt  echo  fabfile.py  hosts.example  initialize.tf  install.sh  production.yml  pyproject.toml  requirements-python-lt-2.7.9-ssl-issue.in  requirements.txt  requirements3.txt  roledefs.json  setup.py  staging.yml  test_requirements.txt  update-requirements.sh  variables.tf
.github/: PULL_REQUEST_TEMPLATE.md
.tests/: spec.yml  tests.sh
.travis/: secrets.tar.enc  spec.yml  tests.sh
64-test/: app-processes.yml  known_hosts  proxy.yml  public.yml
64-test-new/: known_hosts  meta.yml
_authorized_keys/: ansible.pub  cellowitz.pub  echis_geanaruki.pub  echis_melese.pub  echis_robel.pub  nhooper.pub  nking.pub
_users/: dimagi.yml  echis.yml  g2.yml  travis.yml
ansible/: README.md  add-ssh-keys.yml  ansible.cfg  cleanup.yml  deploy_buildservers.yml  deploy_captain.yml  deploy_celery.yml  deploy_chaos.yml  deploy_cleanup.yml  deploy_commcarehq.yml  deploy_common.retry  deploy_common.yml  deploy_control.yml  deploy_db.yml  deploy_elasticsearch.yml  deploy_etckeeper.yml  deploy_formplayer.yml  deploy_fp_load_test.yml  deploy_hostnames.yml  deploy_http_proxy.yml  deploy_load_test.yml  deploy_localsettings.yml  deploy_lvm.yml  deploy_mailrelay.yml  deploy_netvault.yml  deploy_optional.yml  deploy_proxy.yml  deploy_riakcs.yml  deploy_riakcs_new.yml  deploy_shared_data_dir.yml  deploy_shared_dir.yml  deploy_stack.retry  deploy_stack.yml  deploy_tmpreaper.yml  deploy_touchforms.yml  deploy_webworker.yml  deploy_zabbix.yml  es_rolling_restart.yml  letsencrypt_cert.yml  migrate.yml  (+13 more)
changelog/: 0000-changelog.yml.example  0001-add-encrypted-tmp.yml  0002-supervisor-service-definitions.yml  0003-update-supervisor.yml  0004-add-analytics-queue.yml  0005-support-multiple-kafak-brokers.yml  0006-new-case-importer-celery-queue.yml  0007-reorganize-pillows.yml  0008-blob-metadata-part-1.yml  0009-blob-metadata-part-2.yml  0010-letsencrypt-restart-nginx.yml  0011-fix-encrypted-tmp-permissions.yml  0012-Java-upgrade-for-formplayer.yml  0012-generalize-load-case-from-fixture.yml  0013-java-upgrade-for-formplayer.yml  0014-add-tag-to-datadog-http-checks.yml  0015-invoke-celery-directly.yml  0015-prepare-celery-for-upgrade.yml  0015-separate-celery-datadog-http-check.yml  0016-fix-letsencrypt-restart-nginx.yml  0016-invoke-celery-directly.yml  0017-monitor-specific-rabbitmq-queues.yml  0017-remove-celery-results-backend-from-localsettings.yml  0017-use-redis-celery-results-backend.yml  0018-remove-celery-results-backend-from-localsettings.yml  0018-split_pgbouncer_postgresql_vars.yml  0019-remove-celery-results-backend-from-localsettings.yml  0020-update-rabbitmq-logging.yml  0021-fix-letsencrypt-restart-nginx.yml  0022-install-pango.yml  0023-define-management-commands.yml  0023-remove-riak.yml  0023-upgrade-to-python-3.yml  0024-define-management-commands.yml  0024-upgrade-to-python-3.yml  0025-remove-riak.yml  0025-rename-management-commands.yml  0026-move-remaining-management-commands.yml  0027-fix-python3-virtualenv.yml  0028-remove-riak.yml  (+94 more)
commcare-cloud/: README.md  commcare_cloud.py  setup.py
commcare-cloud-bootstrap/: bootstrap.sh  commcare_cloud_bootstrap.py  example_spec.yml  generate_vault_passwords.py  inventory.ini.j2  setup.py
commcare_cloud/: .bash_completion
control/: .bash_completion  activate_venv.sh  check_install.sh  init.sh  update_code.sh
couchdb-cluster-playground/: README.md  docker-compose.yml  requirements.txt  steps.py
decisions/: 0001-record-architecture-decisions.md  0002-back-service-elasticsearch-with-custom-implementation.md  0003-implement-one-command-to-deploy.md
defaults/: main.yml
development/: inventory.ini  meta.yml  postgresql.yml  proxy.yml  public.yml
docs/: .gitignore  404.md  Commcare_Ports_information.csv  Commcare_Ports_information.md  Commcare_Ports_information.xlsx  Gemfile  README.md  _config.yml  hosting-considerations.md  index.md  requirements.txt  system-overview.md
echis/: app-processes.yml  fab-settings.yml  (+3 more)
(+3430 files in other folders)
