[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commcare-cloud"
description = "Tools for standing up and managing a CommCare HQ server environment"
readme = "README.md"
license = { file = "LICENSE" }
version = "1.0.0"

requires-python = ">=3.9"
dependencies = [
    "ansible-vault==2.1.0",
    "ansible~=4.3",
    "ansible-inventory==0.6.4",
    "argparse>=1.4",
    "attrs>=18.1.0",
    "boto3>=1.9.131",
    "clint",
    "couchdb-cluster-admin",
    "cryptography>=42,<44",
    "datadog>=0.2.0",
    "dimagi-memoized>=1.1.0",
    "dnspython",
    "gitpython",
    "importlib-metadata==3.1.0",
    "jinja2-cli",
    "jsonobject",
    "netaddr",
    "passlib",
    "pycryptodome>=3.6.6",
    "PyGithub",
    "pytz",
    "simplejson",
    "six",
    "tabulate"
]

[project.optional-dependencies]
test = [
    "docopt",
    "modernize",
    "nose @ git+https://github.com/dimagi/nose.git@06dff28bbe661b9d032ce839ea0ec8e9eaf6f337",
    "parameterized>=0.6.1",
    "requests-mock",
    "sh",
    "testil"
]
aws = [
    "awscli"
]
dev = [
    "ipdb"
]

[project.scripts]
commcare-cloud = "commcare_cloud.commcare_cloud:main"
cchq = "commcare_cloud.commcare_cloud:main"
manage-commcare-cloud = "commcare_cloud.manage_commcare_cloud.manage_commcare_cloud:main"

[project.urls]
Documentation = "https://commcare-cloud.readthedocs.io/"
Repository = "https://github.com/dimagi/commcare-cloud/"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["commcare_cloud"]
