[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commcare-cloud"
version = "0.0.0"
description = "A tool for managing commcare deploys."
license = "BSD-3-Clause"
requires-python = "~=3.10.0"
dependencies = [
    "ansible~=4.3",
    "ansible-inventory==0.6.4",
    "ansible-vault==2.1.0",
    "attrs",
    "boto3",
    "clint",
    "couchdb-cluster-admin",
    "cryptography",
    "datadog>=0.2.0",
    "dimagi-memoized>=1.1.0",
    "dnspython",
    "gitpython",
    "jinja2-cli",
    "jsonobject",
    "netaddr",
    "packaging",
    "passlib",
    "pycryptodome>=3.6.6",
    "PyGithub",
    "pytz",
    "setuptools<81",
    "sh",
    "simplejson",
    "tabulate",
]

[project.scripts]
commcare-cloud = "commcare_cloud.commcare_cloud:main"
cchq = "commcare_cloud.commcare_cloud:main"
manage-commcare-cloud = "commcare_cloud.manage_commcare_cloud.manage_commcare_cloud:main"

[dependency-groups]
test = [
    "docopt",
    "pytest",
    "pytest-unmagic>=1.1.0",
    "requests-mock",
]
dev = ["ipdb", "pdbp"]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
python_files = ["test_*.py"]
pythonpath = ["."]  # makes top-level `tests` package importable
addopts = [
    '--ignore=src/commcare_cloud/manage_commcare_cloud/test_environments.py',
    '--strict-markers',
]
filterwarnings = [
    'error:.* used magic fixture:UserWarning',
]

[tool.hatch.build.targets.wheel]
packages = ["src/commcare_cloud"]
artifacts = [
    "src/commcare_cloud/.bash_completion",
]
